--- a/workflow/browser.html
+++ b/workflow/browser.html
@@ -31,7 +31,10 @@
             <div class="start-page-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <strong class="start-page-title fs-5" data-i18n="browser.recent_files"></strong>
-                    <button data-action="create-new-workflow" type="button" class="btn btn-primary rounded-pill fw-medium shadow-sm"><i class="ri-add-circle-line"></i> <span data-i18n="browser.create_new"></span></button>
+                    <div>
+                        <button data-action="create-new-app" type="button" class="btn btn-success rounded-pill fw-medium shadow-sm me-2"><i class="ri-apps-line"></i> <span data-i18n="browser.create_new_app"></span></button>
+                        <button data-action="create-new-workflow" type="button" class="btn btn-primary rounded-pill fw-medium shadow-sm"><i class="ri-add-circle-line"></i> <span data-i18n="browser.create_new"></span></button>
+                    </div>
                 </div>
                 <div class="workflow-list-container">
                     <div class="d-flex justify-content-between align-items-center mb-3 position-relative">
