--- a/workflow/sheet.html
+++ b/workflow/sheet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Ứng dụng</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.6.0/fonts/remixicon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css">
     <link rel="stylesheet" href="css/sheet.css">
     
@@ -22,26 +22,13 @@
     </div> -->
     <div id="myGrid" class="ag-theme-alpine" style="height: 100vh; width: 100vw;"></div>
 
-    <!-- Bootstrap Modal để thêm cột (giữ nguyên) -->
-    <div class="modal fade" id="addColumnModal" tabindex="-1" aria-labelledby="addColumnModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="addColumnModalLabel">Thêm Cột Mới</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="mb-3">
-                <label for="columnName" class="form-label">Tên Cột</label>
-                <input type="text" class="form-control" id="columnName" placeholder="Nhập tên cột">
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-            <button type="button" class="btn btn-primary" id="addColumnBtn">Thêm Cột</button>
-          </div>
+    <!-- Dropdown for adding a new column -->
+    <div id="addColumnDropdown" class="dropdown-menu p-2" style="display:none; position: absolute;">
+        <div class="mb-2">
+            <label for="columnName" class="form-label">Tên Cột</label>
+            <input type="text" class="form-control" id="columnName" placeholder="Nhập tên cột">
         </div>
-      </div>
+        <button id="addColumnBtn" class="btn btn-primary btn-sm">Thêm</button>
     </div>
 
 
