--- a/workflow/workflow.html
+++ b/workflow/workflow.html
@@ -215,7 +215,7 @@
                     <div data-ref="console-output" class="console-output flex-grow-1 p-2 font-monospace small bg-dark text-white overflow-auto"></div>
                 </footer>
             </div>
-            <aside data-ref="settings-panel" class="rounded border side-panel settings-panel"></aside>
+            <aside data-ref="settings-panel" class="border-start side-panel settings-panel"></aside>
         </main>
     </div>
 
